# powerpoint-python-pptx-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  BATCH_OPERATIONS.md  IMPLEMENTATION_SUMMARY.md  MCP_AGENT_INSTRUCTIONS.md  MIGRATION.md  README.md  SLIDE_VISIBILITY.md  demo_batch_operations.py  demo_replace_text.py  demo_slide_visibility.py  env.example  mcp_config.json  pyproject.toml  pytest.ini  requirements.txt  test_batch_operations.py  test_mcp_server.py  test_output.txt  test_replace_text.py  test_slide_visibility.py  test_slide_visibility_integration.py
.cursor/plans/: azure_foundry_response_api_integration_f8aae816.plan.md  pptx_mcp_server_implementation_91290ee2.plan.md
.github/: COPILOT_SETUP.md  copilot-instructions.md
.github/agents/: AGENTS.md
.github/instructions/: core.instructions.md  tests.instructions.md  tools.instructions.md
.github/skills/pptx-mcp-server/: README.md  SKILL.md
.github/workflows/: ci.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: migration-notes.md
docs/architecture/: ARCHITECTURE.md
docs/guides/: AI_AGENT_GUIDE.md  AZURE_OPENAI_TOOLS.md  BATCH_OPERATIONS.md  SLIDE_VISIBILITY.md  VIDEO_TRANSCRIPT_TOOLS.md
examples/: demo_batch_operations.py  demo_replace_text.py  demo_slide_visibility.py
mcp_server/: __init__.py  cache.py  config.py  exceptions.py  interfaces.py  logging_config.py  metrics.py  middleware.py  rate_limiter.py  server.py  services.py
mcp_server/core/: __init__.py  image_extractor.py  pptx_handler.py  safe_editor.py
mcp_server/resources/: __init__.py  pptx_resources.py
mcp_server/tools/: __init__.py  edit_tools.py  health_tools.py  notes_tools.py  read_tools.py  registry.py  slide_tools.py  text_replace_tools.py
mcp_server/utils/: __init__.py  validators.py
scripts/: README.md  em_to_minh.py  generate_test_data.py  pptx_notes.py  update_notes_format.py
src/mcp_server/: __init__.py  cache.py  config.py  interfaces.py  logging_config.py  middleware.py  rate_limiter.py  server.py  services.py
src/mcp_server/core/: __init__.py  audio_extractor.py  image_extractor.py  pptx_handler.py  safe_editor.py  video_extractor.py
src/mcp_server/llm/: __init__.py  audio_transcribe_client.py  foundry_client.py  prompts.py  slide_generate.py
src/mcp_server/resources/: __init__.py  pptx_resources.py
src/mcp_server/tools/: edit_tools.py  llm_tools.py  notes_tools.py  read_tools.py  registry.py  slide_tools.py  text_replace_tools.py  transcript_tools.py
src/mcp_server/utils/: __init__.py  async_utils.py  validators.py
tests/: __init__.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: test_architecture.py  test_batch_operations.py  test_mcp_server.py  test_notes_workflow.py  test_replace_text.py  test_slide_visibility.py  test_slide_visibility_integration.py
tests/unit/: test_cache.py  test_config.py  test_exceptions.py  test_image_extractor.py  test_llm_tools.py  test_middleware.py  test_pptx_handler.py  test_rate_limiter.py  test_registry.py  test_safe_editor.py  test_transcript_tools.py  test_validators.py  test_video_extractor.py
